# melody_dummy

./: .gitignore  config.yaml  pyproject.toml  readme.md
melody_dummy/: initialise_database.py  saved_queries.py  survival_functions.py  utils.py
melody_dummy/data_processing/: dummy_data.py
melody_dummy/database/: db_utils.py  populate.py  setup.py
melody_dummy/views/: covid_admissions.sql  covid_deaths.sql
